included new font and solved waveform overlaping modal

--- a/app/assets/stylesheets/single-tracks/_modals.scss
+++ b/app/assets/stylesheets/single-tracks/_modals.scss
@@ -4,7 +4,7 @@
 .learn-more-modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 10; /* Sit on top */
   padding-top: 100px; /* Location of the box */
   left: 0;
   top: 0;
